hid the secret key

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
 				<span>Recently added <i>...<i></i></span>
 				<button><i class="fa-regular fa-plus"></i>    New</button>
 			</div>
-		<a href='/auth/logut'>logout</a>
+		<a href='/auth/logout'>logout</a>
 	</div>
 </body>
 </html>
